# cruft

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-hooks.yaml  .travis.yml  404.html  CHANGELOG.md  LICENSE  README.md  README.rst  index.html  poetry.toml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docker_publish.yml  docker_publish_test.yml  docs.yml  man.yml  manual.yml  pypi_publish.yml  run-tests.yml  run_tests.yml  test_pypi_publish.yml
CHANGELOG/: index.html
art/: logo_large.xcf
cruft/: __init__.py  __main__.py  _cli.py  _logo.py  _version.py  api.py  cli.py  exceptions.py  logo.py
cruft/_commands/: __init__.py  check.py  create.py  diff.py  link.py  update.py  utils.py
cruft/_commands/utils/: __init__.py  clean.py  cookiecutter.py  cruft.py  diff.py  diff_utils.py  generate.py  generate_utils.py  iohelper.py  nested.py  validate.py
cruft/commands/: __init__.py  _utils.py  check.py  create.py  link.py  update.py
docker/: Dockerfile
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
docs/contributing/1.-contributing-guide/: index.html
docs/contributing/2.-coding-standard/: index.html
docs/contributing/3.-code-of-conduct/: index.html
docs/contributing/4.-acknowledgements/: index.html
reference/cruft/: index.html
reference/cruft/exceptions/: index.html
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
tests/: conftest.py  test_api.py  test_cli.py  test_exceptions.py  test_utils.py
tests/testdata/nested-templates/: cookiecutter.json
tests/testdata/nested-templates/fake-project/: cookiecutter.json
tests/testdata/non-unicode-data/: .gitattributes  data.txt
tests/testdata/unicode-data/: extra_context.json
